tests/baselines/reference/FunctionExpression1_es6.errors.txt
tests/cases/conformance/es6/functionExpressions/FunctionExpression1_es6.ts(1,18): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/functionExpressions/FunctionExpression1_es6.ts (1 errors) ====
    var v = function * () { }
                     ~
!!! error TS9001: 'generators' are not currently supported.